2013-05-26 (#645)
- update German patterns (by Werner Lemberg), version 2013-05-26

2013-05-21 (#644)
- add LPPL licence statement to Thai patterns

2013-05-16 (#636-#643)
- update luatex-hyphen.dtx and derivate files:
- remove hyphen.cfg (Babel now provides a working one)
- update etex.src
- update luatex-hyphen.lua
- update documentation

2013-05-08 (#635)
- texmf -> texmf-dist

== CTAN release 2013.05.08 (#634) ==

2013-05-08 (#634)
- update the list of languages in documentation

2013-05-08 (#633)
- use new converters for T8M and LTH
- update the list of languages in documentation

2013-05-02 (#630)
- add proper converters for T8M and LTH encodings

2013-04-01 (#625, #626)
- cleanup luatex-hyphen module
- fix adding a dialect of a synonym in LuaTeX

2013-03-01 (#622, #624)
- update Georgian wordlist and patterns

2013-02-27 (#621)
- set all \lccode-s in pTeX patterns

2013-02-25 (#619)
- add the wordlist used for generating Georgian hyphenation patterns

2013-02-25 (#617, #618)
- add Georgian hyphenation patterns (by Levan Shoshiashvili)
- add Thai hyphenation patterns (by Theppitak Karoonboonyanan)

2013-02-25 (#616)
- add support for Georgian and Thai font encodings: T8M and LTH
- fix a line in QX font encoding

== CTAN release 2013.02.21 (#614) ==

2013-02-14 (#613)
- add Piedmontese patterns (by Claudio Beccari)

2012-12-13 (#611)
2012-12-12 (#610)
- righthyphenmin for Sanskrit should be 3 instead of 5

== CTAN release 2012.05.30 (#609) ==

2012-03-30 (#609)
- sync comments of German patterns with released version 

2012-05-28 (#607)
- update German patterns (by Werner Lemberg)

== CTAN release 2012.05.23 (#606) ==

2012-05-23 (#606)
- update Norwegian patterns (by Ole Michael Selberg)
- remove Lao patterns (until they are improved)
- remove 'furlan' as a synonym for 'friulan'

== CTAN release 2012.04.16 (#604) ==

2012-04-16 (#604)
- get upstream changes for hyphen.cfg from Babel 2008/07/08 v3.8m

2012-04-16 (#602)