@@ -29,7 +29,6 @@ french	loadhyph-fr.tex
 =francais
 friulan	loadhyph-fur.tex
 galician	loadhyph-gl.tex
-georgian	loadhyph-ka.tex
 german	loadhyph-de-1901.tex
 ngerman	loadhyph-de-1996.tex
 swissgerman	loadhyph-de-ch-1901.tex
