@@ -1,3 +1,6 @@
+2013-05-26 (#646)
+- remove Georgian patterns (waiting for licence)
+
 2013-05-26 (#645)
 - update German patterns (by Werner Lemberg), version 2013-05-26
 
